Bumping dependencies on JUnit 4 + Java 17