@@ -7,21 +7,21 @@
   <version>1.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <properties>
-    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.target>17</maven.compiler.target>
     <failOnMissingWebXml>false</failOnMissingWebXml>
-    <maven.compiler.source>11</maven.compiler.source>
-    <payara.version>5.2021.7</payara.version>
+    <maven.compiler.source>17</maven.compiler.source>
+    <payara.version>5.2022.5</payara.version>
     <final.name>kukulkan-ee</final.name>
-    <slf4j.version>1.7.32</slf4j.version>
-    <deltaspike.version>1.9.4</deltaspike.version>
+    <slf4j.version>2.0.6</slf4j.version>
+    <deltaspike.version>1.9.6</deltaspike.version>
     <jboss.arquillian.version>1.6.0.Final</jboss.arquillian.version>
-    <jkube.version>1.4.0</jkube.version>
+    <jkube.version>1.10.1</jkube.version>
   </properties>
   <dependencies>
     <dependency>
       <groupId>org.eclipse.microprofile</groupId>
       <artifactId>microprofile</artifactId>
-      <version>4.0.1</version>
+      <version>4.1</version>
       <type>pom</type>
       <scope>provided</scope>
     </dependency>
@@ -66,7 +66,7 @@
       <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
-          <version>4.13.1</version>
+          <version>4.13.2</version>
           <scope>test</scope>
       </dependency>
       <dependency>
@@ -83,7 +83,7 @@
       <dependency>
           <groupId>fish.payara.arquillian</groupId>
           <artifactId>arquillian-payara-server-embedded</artifactId>
-          <version>2.3.1</version>
+          <version>2.5</version>
           <scope>test</scope>
       </dependency>
       <dependency>
@@ -114,6 +114,14 @@
   <build>
     <finalName>kukulkan-ee</finalName>
     <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.2</version>
+            <configuration>
+            <failOnMissingWebXml>false</failOnMissingWebXml>
+            </configuration>
+        </plugin>
       <plugin>
           <groupId>org.bsc.maven</groupId>
           <artifactId>maven-processor-plugin</artifactId>
@@ -161,7 +169,7 @@
                 </execution>
             </executions>
             <configuration>
-                <argLine>-Xmx2048m -Xmx2048m --illegal-access=permit</argLine>
+                <argLine>-Xmx2048m -Xmx2048m --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.management/sun.management=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED --add-opens=java.logging/java.util.logging=ALL-UNNAMED --add-exports=java.base/sun.net.www=ALL-UNNAMED --add-exports=java.base/sun.security.util=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.desktop/java.beans=ALL-UNNAMED --add-exports=jdk.naming.dns/com.sun.jndi.dns=ALL-UNNAMED</argLine>
                 <systemProperties>
                     <arquillian.launch>payara-embedded</arquillian.launch>
                 </systemProperties>
